[gd_scene load_steps=9 format=3 uid="uid://da880hshpodhc"]

[ext_resource type="Script" path="res://view/plant_slot.gd" id="1_7xscl"]
[ext_resource type="Texture2D" uid="uid://cqjyvvtda48tl" path="res://assets/e_button.png" id="2_r83hf"]

[sub_resource type="Gradient" id="Gradient_a6svp"]
offsets = PackedFloat32Array(0.75974, 0.808442, 0.961039)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.12549, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mxvvr"]
gradient = SubResource("Gradient_a6svp")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.502294, 0.493119)
metadata/_snap_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l66mk"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_lcaro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -7)]
}

[sub_resource type="Animation" id="Animation_h31a7"]
resource_name = "bobbing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(8, -7), Vector2(8, -7), Vector2(8, -8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2c2cr"]
_data = {
"RESET": SubResource("Animation_lcaro"),
"bobbing": SubResource("Animation_h31a7")
}

[node name="PlantSlot" type="Node2D"]
script = ExtResource("1_7xscl")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = SubResource("GradientTexture2D_mxvvr")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l66mk")

[node name="InteractablePopUp" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(8, -7)
texture = ExtResource("2_r83hf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="InteractablePopUp"]
libraries = {
"": SubResource("AnimationLibrary_2c2cr")
}
autoplay = "bobbing"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
